[package]
name = "dbconnect"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2"
env_logger = "0.7.*"
futures = { version = "0.3.*"}
log = "0.4.*"
rust-embed={ version = "6.6.0", features = ["include-exclude"] }
tokio = {version = "0.2.*", features = ["full"] }
